force-app/main/default/objects/Accreditation__c.object
<CustomObject>
    <fields>
        <fullName>DateDeb__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date de Début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateFin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date de Fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activé</fullName>
                </value>
                <value>
                    <fullName>Suspendu</fullName>
                </value>
                <value>
                    <fullName>Expiré</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 - Certification</fullName>
                </value>
                <value>
                    <fullName>02 - Qualification</fullName>
                </value>
                <value>
                    <fullName>03 - Accréditation Assurance</fullName>
                </value>
                <value>
                    <fullName>04 - Accréditation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendeur__c</fullName>
        <label>Vendeur</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accreditations</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Accreditation</label>
    <nameField>
        <displayFormat>ACR-{000000}</displayFormat>
        <label>Accreditation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accreditations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>